Proyecto2/Plantillas/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: kesm12/consumer-kafka:v2
        resources:
          limits:
            cpu: "0.4"
            memory: "700Mi"
