Proyecto2/Plantillas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1-proyecto2-ingress
  namespace: so1jun2024
spec:
  ingressClassName: nginx
  rules:
    - host: 34.122.71.194.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grpc-client-service
                port:
                  number: 3000
            path: /insert


            #34.118.234.94   130.211.209.138
