Proyecto2/Plantillas/ingressPro.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1-proyecto2-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
    - host: 35.223.148.4.nip.io
      http:
        paths:
          - path: /insert
            pathType: Prefix
            backend:
              service:
                name: grpc-client-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 4000
